--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,18 @@
 </head>
 <body>
   <h1>Política de Privacidade</h1>
-  <p>Esta é a política de privacidade do nosso aplicativo...</p>
+  <p>Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações ao usar nosso aplicativo.</p>
+  <h2>Informações Coletadas</h2>
+  <p>Coletamos seu endereço IP para controle de fluxo e prevenção de abuso. Não coletamos nenhuma outra informação pessoalmente identificável.</p>
+  <h2>Uso das Informações</h2>
+  <p>Usamos o endereço IP para monitorar e gerenciar o tráfego do aplicativo, garantindo uma experiência de usuário estável e segura.</p>
+  <h2>Compartilhamento de Informações</h2>
+  <p>Não compartilhamos suas informações com terceiros, exceto quando exigido por lei.</p>
+  <h2>Segurança</h2>
+  <p>Implementamos medidas de segurança para proteger suas informações contra acesso não autorizado.</p>
+  <h2>Alterações na Política</h2>
+  <p>Podemos atualizar esta Política de Privacidade periodicamente. Notificaremos você sobre quaisquer mudanças significativas através do aplicativo.</p>
+  <h2>Contato</h2>
+  <p>Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade, entre em contato através do email: lucasgsalbuquerque@gmail.com.</p>
 </body>
 </html>
